<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InClass_01.InClass01">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/TextView_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/TextView_weight"
        app:layout_constraintStart_toStartOf="@+id/textView_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />

    <TextView
        android:id="@+id/textView_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:text="@string/TextView_height"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber_weight"
        app:layout_constraintTop_toBottomOf="@+id/textView_weight" />

    <TextView
        android:id="@+id/textView_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/TextView_lb"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber_weight"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber_weight"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber_weight" />

    <TextView
        android:id="@+id/textView_feet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView_feet"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber_feet"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber_feet"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber_feet" />

    <TextView
        android:id="@+id/textView_inches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView_Inches"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber_inches"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber_inches"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber_inches" />

    <EditText
        android:id="@+id/editTextNumber_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_weight"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textView_weight"
        app:layout_constraintTop_toBottomOf="@+id/textView_weight" />

    <EditText
        android:id="@+id/editTextNumber_feet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_height"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textView_height"
        app:layout_constraintTop_toBottomOf="@+id/textView_height" />

    <EditText
        android:id="@+id/editTextNumber_inches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_inches"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber_feet"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber_feet" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/button_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber_inches" />

    <TextView
        android:id="@+id/textView_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/TextView_Result"
        app:layout_constraintEnd_toEndOf="@+id/button_calculate"
        app:layout_constraintStart_toStartOf="@+id/button_calculate"
        app:layout_constraintTop_toBottomOf="@+id/button_calculate" />
</androidx.constraintlayout.widget.ConstraintLayout>