<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InClass_02.InClass02">

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="200dp"
        android:text="@string/TextView_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/TextView_Email"
        app:layout_constraintEnd_toEndOf="@+id/textView_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView_name"
        app:layout_constraintTop_toBottomOf="@+id/editText_Name" />

    <EditText
        android:id="@+id/editText_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Please enter your name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Please enter your email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editText_Name"
        app:layout_constraintStart_toStartOf="@+id/textView_Email"
        app:layout_constraintTop_toBottomOf="@+id/textView_Email" />

    <ImageView
        android:id="@+id/imageView_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/select_avatar"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/textView_text_I_use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/TextView_I_Use"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/imageView_select" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView_text_I_use"
        app:layout_constraintTop_toBottomOf="@+id/textView_text_I_use">

        <RadioButton
            android:id="@+id/radioButton_android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton_Android" />

        <RadioButton
            android:id="@+id/radioButton_iOS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton_iOS" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView_Text_modd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:text="@string/TextView_Mood"
        app:layout_constraintStart_toStartOf="@+id/textView_text_I_use"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView_mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView_Moodd"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Text_modd"
        app:layout_constraintStart_toEndOf="@+id/textView_Text_modd"
        app:layout_constraintTop_toTopOf="@+id/textView_Text_modd" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="48dp"
        android:src="@drawable/happy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/textView_mood" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:max="3"
        android:progress="2"
        app:layout_constraintEnd_toEndOf="@+id/textView_Text_modd"
        app:layout_constraintStart_toStartOf="@+id/textView_Text_modd"
        app:layout_constraintTop_toBottomOf="@+id/textView_Text_modd" />

    <Button
        android:id="@+id/button_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/Button_Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />
</androidx.constraintlayout.widget.ConstraintLayout>