<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/EditProfileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InClass_03.EditProfileFragment">

    <EditText
        android:id="@+id/inClass03_editText_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/inClass03_editText_Name"
        app:layout_constraintStart_toStartOf="@+id/inClass03_editText_Name"
        app:layout_constraintTop_toBottomOf="@+id/inClass03_editText_Name" />

    <EditText
        android:id="@+id/inClass03_editText_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/inClass03_imageView_emptyAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/select_avatar"
        app:layout_constraintEnd_toEndOf="@+id/inClass03_editText_Email"
        app:layout_constraintStart_toStartOf="@+id/inClass03_editText_Email"
        app:layout_constraintTop_toBottomOf="@+id/inClass03_editText_Email" />

    <TextView
        android:id="@+id/inClass03_textView_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="I use"
        app:layout_constraintEnd_toStartOf="@+id/inClass03_editText_Email"
        app:layout_constraintTop_toBottomOf="@+id/inClass03_imageView_emptyAvatar" />

    <RadioGroup
        android:id="@+id/inClass03_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/inClass03_textView_phone"
        app:layout_constraintTop_toBottomOf="@+id/inClass03_textView_phone">

        <RadioButton
            android:id="@+id/inClass03_radioButton_android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton_Android" />

        <RadioButton
            android:id="@+id/inClass03_radioButton_iOS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton_iOS" />
    </RadioGroup>

    <TextView
        android:id="@+id/inClass03_textView_mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/TextView_Mood"
        app:layout_constraintStart_toStartOf="@+id/inClass03_textView_phone"
        app:layout_constraintTop_toBottomOf="@+id/inClass03_radioGroup" />

    <TextView
        android:id="@+id/inClass03_textView_moood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView_Moodd"
        app:layout_constraintBottom_toBottomOf="@+id/inClass03_textView_mood"
        app:layout_constraintStart_toEndOf="@+id/inClass03_textView_mood"
        app:layout_constraintTop_toTopOf="@+id/inClass03_textView_mood" />

    <SeekBar
        android:id="@+id/inClass03_seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:max="3"
        android:progress="2"
        app:layout_constraintEnd_toEndOf="@+id/inClass03_textView_moood"
        app:layout_constraintStart_toStartOf="@+id/inClass03_textView_mood"
        app:layout_constraintTop_toBottomOf="@+id/inClass03_textView_mood" />

    <ImageView
        android:id="@+id/inClass03_imageView_mood"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/happy"
        app:layout_constraintBottom_toBottomOf="@+id/inClass03_seekBar"
        app:layout_constraintStart_toEndOf="@+id/inClass03_seekBar"
        app:layout_constraintTop_toTopOf="@+id/inClass03_seekBar" />

    <Button
        android:id="@+id/inClass03_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Submit"
        app:layout_constraintEnd_toEndOf="@+id/inClass03_editText_Email"
        app:layout_constraintStart_toStartOf="@+id/inClass03_editText_Email"
        app:layout_constraintTop_toBottomOf="@+id/inClass03_seekBar" />

</androidx.constraintlayout.widget.ConstraintLayout>