<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_practice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Inclass_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_Inclass_01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button_InClass_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_InClass_02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Inclass_01" />

    <Button
        android:id="@+id/button_toInClass03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="INCLASS_03"
        app:layout_constraintEnd_toEndOf="@+id/button_InClass_02"
        app:layout_constraintStart_toStartOf="@+id/button_InClass_02"
        app:layout_constraintTop_toBottomOf="@+id/button_InClass_02" />

    <Button
        android:id="@+id/button_toInClass04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="INCLASS_04"
        app:layout_constraintEnd_toEndOf="@+id/button_toInClass03"
        app:layout_constraintStart_toStartOf="@+id/button_toInClass03"
        app:layout_constraintTop_toBottomOf="@+id/button_toInClass03" />

    <Button
        android:id="@+id/button_toInClass05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="INCLASS_05"
        app:layout_constraintEnd_toEndOf="@+id/button_toInClass04"
        app:layout_constraintStart_toStartOf="@+id/button_toInClass04"
        app:layout_constraintTop_toBottomOf="@+id/button_toInClass04" />

    <Button
        android:id="@+id/button_toInClass06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="inclass_06"
        app:layout_constraintEnd_toEndOf="@+id/button_toInClass05"
        app:layout_constraintStart_toStartOf="@+id/button_toInClass05"
        app:layout_constraintTop_toBottomOf="@+id/button_toInClass05" />

    <Button
        android:id="@+id/button_toInClass07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="InClass07"
        app:layout_constraintEnd_toEndOf="@+id/button_toInClass06"
        app:layout_constraintStart_toStartOf="@+id/button_toInClass06"
        app:layout_constraintTop_toBottomOf="@+id/button_toInClass06" />

</androidx.constraintlayout.widget.ConstraintLayout>